--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ google-auth==1.13.1
 google-cloud-vision==1.0.0
 googleapis-common-protos==1.51.0
 grpcio==1.28.1
+gunicorn==20.0.4
 h11==0.9.0
 httptools==0.1.1
 idna==2.9
